--- a/hot_dogz/templates/_interactions.html
+++ b/hot_dogz/templates/_interactions.html
@@ -1,4 +1,4 @@
-<div class="flex py-2 text-lg justify-evenly ">
+<div class="flex text-lg justify-evenly ">
     <div class="like-box">
         <a href="{{url_for('users.like', dog_id=dog.pk)}}"><i class="{{'text-blue-600' if current_user in dog.liked_by else 'text-gray-400'}} fas fa-thumbs-up"></i> {{dog.liked_by|length}}</a>
     </div>
