--- a/hot_dogz/templates/base.html
+++ b/hot_dogz/templates/base.html
@@ -97,5 +97,6 @@
         </nav>
       </div>
     {% endif %}
+    <script src="{{url_for('static', filename='js/script.js')}}"></script>
 </body>
 </html>
