--- a/hot_dogz/templates/_dog_card.html
+++ b/hot_dogz/templates/_dog_card.html
@@ -1,4 +1,4 @@
-<div class="grid w-full grid-cols-2 bg-white border-4 dash-border h-36">
+<div class="grid w-full grid-cols-2 transition-opacity duration-1000 bg-white border-4 dash-border h-36">
     <div class="grid place-items-center">
         <img src="{{dog.img_url_thumb}}" alt="A picture of my dog {{dog.name}}" class="object-cover h-32 px-1 rounded-lg" loading="lazy">
     </div>
