--- a/hot_dogz/templates/base.html
+++ b/hot_dogz/templates/base.html
@@ -27,9 +27,9 @@
               {% if current_user.is_authenticated %}
               <div class="hidden md:flex">
                 <a class="block mr-4 hover:text-primary-600" href="{{url_for('users.logout')}}">Logout</a>
-                <a class="block mr-4 hover:text-primary-600" href="/link">Contact Us</a>
+                <a class="block mr-4 hover:text-primary-600" href="{{url_for('main.contact')}}">Contact Us</a>
                 <a class="block mr-4 hover:text-primary-600" href="{{url_for('dogs.upload_dog')}}">Upload</a>
-                <a class="block mr-4 hover:text-primary-600" href="{{url_for('main.gallery', view='hot')}}">Gallery</a>
+                <a class="block mr-4 hover:text-primary-600" href="{{url_for('main.gallery', view='hot', animate='on')}}">Gallery</a>
               </div>
               {% endif %}
             <div class="flex text-sm" v-else>
@@ -52,7 +52,7 @@
         {% if messages %}
           <div class="absolute w-full top-10">
             {% for category, message in messages %}
-              <div class="w-11/12 p-2 m-2 mx-auto text-center text-white {{category}} rounded-lg shadow-xl animate-flash">
+              <div class="w-11/12 p-2 m-2 mx-auto text-center text-white {{category}} rounded-lg shadow-xl animate-flash ">
                 <p><i class="fas fa-{{category}} mr-4"></i>{{message}}</p>
               </div>
             {% endfor %}
@@ -76,7 +76,7 @@
                </a>
             </li>
             <li>
-              <a href="/link" class="focus:text-white ">
+              <a href="{{url_for('main.contact')}}" class="focus:text-white ">
                 <span class="block">Contact</span>
                 <i class="text-xl far fa-envelope"></i>
               </a>
@@ -88,7 +88,7 @@
               </a>
             </li>
             <li>
-              <a href="{{url_for('main.gallery', view='hot')}}" class="focus:text-white ">
+              <a href="{{url_for('main.gallery', view='hot', animate='on')}}" class="focus:text-white ">
                 <span class="block">Gallery</span>
                 <i class="text-xl fas fa-dog"></i>
               </a>
