--- a/hot_dogz/templates/gallery.html
+++ b/hot_dogz/templates/gallery.html
@@ -2,12 +2,12 @@
 {% block content %}
     <!-- MAIN GALLERY PAGE -->
     <div class="bg-fixed bg-bottom bg-no-repeat bg-contain {{'bg-dog5' if view == 'hot' else 'bg-dog2'}}">
-        <div class="bg-fade ">
+        <div class="{{'bg-fade' if animate == 'on' else 'bg-no-fade'}} ">
             <h1 class="title text-secondary-500 ">Gallery</h1>
             <div class="grid grid-cols-2 py-4 place-items-center">
-                <a href="{{url_for('main.gallery', view='hot')}}"
+                <a href="{{url_for('main.gallery', view='hot', animate='on')}}"
                 class="font-title {{'text-4xl text-primary-500 italic' if view == 'hot' else 'text-3xl text-secondary-500'}} hover:underline focus:italic">HOT</a>
-                <a href="{{url_for('main.gallery', view='new')}}"
+                <a href="{{url_for('main.gallery', view='new', animate='on')}}"
                 class="font-title {{'text-4xl text-primary-500 italic' if view == 'new' else 'text-3xl text-secondary-500'}} hover:underline focus:italic">NEW</a>
             </div>
             <p class="text-lg font-bold text-center text-primary-500">
@@ -17,7 +17,7 @@
                     <i class="far fa-star"></i> <span class="text-gray-500">Check out the newest dogs</span> <i class="far fa-star"></i>
                 {% endif %}
             </p>
-            <div id="gallery-container" class="flex flex-col min-h-screen gap-4 px-4 py-4">
+            <div class="flex flex-col min-h-screen gap-4 px-4 py-4 {{'gallery-animate' if animate == 'on'}}">
                 {% for dog in dogs.items %}
                     {% include '_dog_card.html' %}
                 {% endfor %}
