added contact form & template

--- a/hot_dogz/templates/upload_dog.html
+++ b/hot_dogz/templates/upload_dog.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <!-- UPLOAD DOG FORM PAGE -->
-    <h1 class="mb-10 text-5xl text-center">{{title}}</h1>
+<h1 class="title text-secondary-500 ">{{title}}</h1>
     <div class="container flex flex-col items-center mx-auto">
         <form action="" method="POST" enctype="multipart/form-data" class="flex flex-col max-w-2xl p-4 border border-gray-100 rounded-lg shadow-lg " novalidate>
                 {{ form.hidden_tag()}}
