--- a/hot_dogz/templates/login.html
+++ b/hot_dogz/templates/login.html
@@ -2,6 +2,7 @@
 {% block content %}
     <!-- LOGIN FORM PAGE -->
     <div class="container flex flex-col items-center mx-auto">
+        <h1 class="title text-secondary-500 ">Log in</h1>
         <form action="" method="POST" class="flex flex-col p-4 border border-gray-100 rounded-lg shadow-lg w-80" novalidate>
                 {{ form.hidden_tag()}}
                 <fieldset class="pb-2">
@@ -21,8 +22,11 @@
                 <fieldset class="pb-2">
                     {{form.submit(class_='w-full btn btn-secondary')}}
                 </fieldset>
-                
         </form>
+        <div class="flex flex-col items-center gap-4 mt-10 text-xl font-bold text-center">
+            <p class="text-gray-500 ">Not registered yet?</p>
+            <a href="{{url_for('users.register')}}" class="w-40 btn btn-primary">Sign Up</a>
+        </div>
     </div>
 
 
