--- a/hot_dogz/templates/profile.html
+++ b/hot_dogz/templates/profile.html
@@ -2,12 +2,12 @@
 
 {% block content %}
     <!-- USER PROFILE -->
-    <div class="container mx-auto border border-gray-300 shadow-lg">
+    <div class="container mx-auto shadow-lg">
         <!-- DETAILS (avatar, username, edit buttons if current user) -->
-        <div class="flex items-center py-4 border-b-2 border-gray-300 justify-evenly">
+        <div class="flex items-center py-4 justify-evenly">
             <img src="{{user.img_url}}" alt="" class="w-32 ">
             <div class="flex flex-col justify-between h-24">
-                <h1 class="text-4xl text-center "> {{user.username}} </h1>
+                <h1 class="text-4xl text-center uppercase font-title text-secondary-500 "> {{user.username}} </h1>
                  {% if user.username == current_user.username %}
                  <div class="flex gap-2">
                     <a href=" {{url_for('users.select_avatar')}} " class="btn-small">Edit Avatar</a>
@@ -17,8 +17,8 @@
             </div>
         </div>
         <!-- USER UPLOADS -->
-        <div class="border-b-2 border-gray-300 ">
-            <h1 class="py-2 text-3xl"> My Dogs </h1>
+        <div class="">
+            <h1 class="py-2 text-5xl text-center font-title text-secondary-500"> My Dogs </h1>
             <div class="flex flex-col gap-4 p-2">
                 {% if user_dogs|length %}
                     {% for dog in user_dogs %}
@@ -28,13 +28,13 @@
                     <p>No dogs uploaded yet!</p>
                 {% endif %}
                 {% if user.username == current_user.username %}
-                    <a href=" {{url_for('dogs.upload_dog')}} " class="w-40 py-1 text-base text-center text-white rounded-lg bg-secondary-500 hover:bg-secondary-600 focus:outline-none focus:ring-2 focus:ring-secondary-400 ">Upload dog</a>
+                    <a href=" {{url_for('dogs.upload_dog')}} " class="w-40 py-1 mx-auto text-base btn btn-primary ">Upload dog</a>
                 {% endif %}
             </div>
         </div>
         <!-- USER FAVOURITES -->
-        <div class="border-b-2 border-gray-300 ">
-            <h1 class="py-2 text-3xl"> Favourites </h1>
+        <div class="">
+            <h1 class="py-2 text-5xl text-center font-title text-secondary-500"> My Favourites </h1>
             <div class="flex flex-col gap-4 p-2">
                 {% if favourites|length %}
                     {% for dog in favourites %}
