--- a/hot_dogz/templates/register.html
+++ b/hot_dogz/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <!-- RESITER ACCOUNT FORM PAGE -->
-    <h1 class="mb-10 text-5xl">Register</h1>
+    <h1 class="title text-secondary-500 ">Register</h1>
     <div class="container flex flex-col items-center mx-auto">
         <form action="" method="POST" class="flex flex-col p-4 border border-gray-100 rounded-lg shadow-lg w-80" novalidate>
                 {{ form.hidden_tag()}}
@@ -36,7 +36,10 @@
                 <fieldset class="pb-2 ">
                     {{form.submit(class_='w-full btn btn-secondary')}}
                 </fieldset>
-                
         </form>
+        <div class="flex flex-col items-center gap-4 mt-10 text-xl font-bold text-center">
+            <p class="text-gray-500 ">Already a member?</p>
+            <a href="{{url_for('users.login')}}" class="w-40 btn btn-primary">Log In</a>
+        </div>
     </div>
 {% endblock %}
