--- a/hot_dogz/templates/login.html
+++ b/hot_dogz/templates/login.html
@@ -27,6 +27,9 @@
             <p class="text-gray-500 ">Not registered yet?</p>
             <a href="{{url_for('users.register')}}" class="w-40 btn btn-primary">Sign Up</a>
         </div>
+        <div class="flex flex-col items-center gap-4 mt-10 text-xl font-bold text-center">
+            <p class="text-gray-500 ">Forgot your password? <a href="{{url_for('users.reset_password_request')}}" class="text-primary-500 hover:underline hover:text-primary-600 ">Reset it now</a></p>
+        </div>
     </div>
 
 
