--- a/hot_dogz/templates/profile.html
+++ b/hot_dogz/templates/profile.html
@@ -25,7 +25,7 @@
                         {% include '_dog_card.html' %}
                     {% endfor %}
                 {% else %}
-                    <p>No dogs uploaded yet!</p>
+                    <p class="text-xl font-bold text-center text-gray-500">No dogs uploaded yet!</p>
                 {% endif %}
                 {% if user.username == current_user.username %}
                     <a href=" {{url_for('dogs.upload_dog')}} " class="w-40 py-1 mx-auto text-base btn btn-primary ">Upload dog</a>
@@ -41,7 +41,7 @@
                         {% include '_dog_card.html' %}
                     {% endfor %}
                 {% else %}
-                    <p>No favourite dogs saved yet!</p>
+                    <p class="text-xl font-bold text-center text-gray-500">No favourite dogs saved yet!</p>
                 {% endif %}
             </div>
         </div>
