--- a/hot_dogz/templates/_dog_card.html
+++ b/hot_dogz/templates/_dog_card.html
@@ -12,7 +12,7 @@
                     <a href="{{url_for('dogs.delete_dog', dog_id=dog.pk)}}" class="underline ">Delete</a>
                 </div>
             {% else %}
-                <p>Human: <span class="font-semibold ">{{dog.owner.username}}</span></p>
+                <p>Human: <a href="{{url_for('users.profile', username=dog.owner.username)}}" class="text-sm uppercase text-secondary-500 hover:underline focus:text-secondary-600">{{dog.owner.username}}</a></p>
             {% endif %}
         </div>
     </div>
