--- a/hot_dogz/templates/delete_account.html
+++ b/hot_dogz/templates/delete_account.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+<!--  Confirm Page for deleting a user's account -->
 {% block content %}
     <div class="bg-bottom bg-no-repeat bg-contain min-h-screen-less-nav bg-dog7">
         <div class="flex flex-col gap-3 py-4 text-center">
