--- a/hot_dogz/templates/reset_password.html
+++ b/hot_dogz/templates/reset_password.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-    <!-- LOGIN FORM PAGE -->
+    <!-- NEW PASSWORD ENTRY FORM -->
     <div class="container flex flex-col items-center mx-auto bg-fixed bg-bottom bg-no-repeat bg-contain min-h-screen-less-nav bg-dog6">
         <h1 class="py-4 text-4xl text-center font-title text-secondary-500 ">Reset Password</h1>
         <form action="" method="POST" class="flex flex-col p-4 bg-white border border-gray-100 rounded-lg shadow-lg w-80" novalidate>
