--- a/hot_dogz/templates/_comment_card.html
+++ b/hot_dogz/templates/_comment_card.html
@@ -1,3 +1,4 @@
+<!-- Comment component on main full-size dog image page  -->
 <div class="flex items-center px-2 mx-4 border-2 border-gray-300 border-dashed rounded-lg">
     <img src="{{comment.author.img_url}}" alt="{{comment.author.username}}'s avatar" class="w-auto h-20 ">
     <div class="flex flex-col justify-center flex-1 gap-1 p-1">
