--- a/hot_dogz/templates/_dog_card.html
+++ b/hot_dogz/templates/_dog_card.html
@@ -1,3 +1,5 @@
+<!-- Dog Card Component - displayed on main gallery and on user profiles -->
+<!-- Start as invisible if animated == 'on' (only used for main gallery page) -->
 <div class="w-full transition-opacity duration-1000 bg-white border-4 dash-border  {{'opacity-0' if animate == 'on'}}">
     <div class="flex">
         <div class="grid flex-1 place-items-center">
@@ -6,6 +8,7 @@
         <div class="flex flex-col flex-1 px-1 text-gray-600 justify-evenly">
             <p>Name: <span class="font-semibold">{{dog.name}}</span></p>
             <p>Breed: <span class="font-semibold">{{dog.breed.breed_name}}</span></p>
+            <!-- Display dog's owner unless it is current user, if so display edit and delete buttons -->
             {% if dog.owner == current_user %}
                 <div class="flex gap-2">
                     <a href="{{url_for('dogs.edit_dog', dog_id=dog.pk)}}" class="underline">Edit</a>
@@ -18,26 +21,7 @@
     </div>
     <div class="flex pb-1">
         <a href="{{url_for('dogs.dog_page', dog_id=dog.pk)}}" class="self-end flex-1 text-center underline ">Full Size / Comments</a>
+        <!-- Inclide heart and like buttons -->
         <div class="flex-1">{% include '_interactions.html' %}</div>
     </div>
 </div>
-
-<!-- <div class="grid w-full grid-cols-2 transition-opacity duration-1000 bg-white border-4 dash-border h-36 {{'opacity-0' if animate == 'on'}}">
-    <div class="grid place-items-center">
-        <img src="{{dog.img_url_thumb}}" alt="A picture of my dog {{dog.name}}" class="object-cover h-32 px-1 rounded-lg" loading="lazy">
-    </div>
-    <div class="flex flex-col justify-between p-2 text-xs text-gray-600">
-        <p>Name: <span class="text-base text-gray-800 ">{{dog.name}}</span></p>
-        {% if dog.owner == current_user %}
-            <div class="flex gap-2">
-                <a href="{{url_for('dogs.edit_dog', dog_id=dog.pk)}}" class="underline">Edit</a>
-                <a href="{{url_for('dogs.delete_dog', dog_id=dog.pk)}}" class="underline ">Delete</a>
-            </div>
-        {% else %}
-            <p>Human: <span class="text-sm text-gray-800 ">{{dog.owner.username}}</span></p>
-        {% endif %}
-        <p>Breed: <span class="text-gray-800">{{dog.breed.breed_name}}</span></p>
-        {% include '_interactions.html' %}
-        <a href="{{url_for('dogs.dog_page', dog_id=dog.pk)}}" class="underline">Full Size / Comments</a>
-    </div>
-</div> -->
